fix alignment of list and button in the scheme of warehouse

--- a/src/app/components/warehouse-scheme/warehouse-scheme-info/warehouse.scheme.component.scss
+++ b/src/app/components/warehouse-scheme/warehouse-scheme-info/warehouse.scheme.component.scss
@@ -116,3 +116,8 @@
   margin: 2%;
   opacity: 0.9;
 }
+
+.row:not(.expanded) .row {
+  max-width: 250px;
+  min-width: 150px;
+}
